# self_governance

./: .gitignore  README.md  issues.xml  main.py  pyproject.toml
.github/workflows/: address_issues.yml
self_governance/: __main__.py  nation.py  nation_test.py
