[tool.poetry]
name = "self-governance"
version = "0.1.0"
description = ""
authors = ["Jiayu Yi <yijiayu@gmail.com>"]
readme = "README.md"
packages = [{include = "self_governance"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
typer = "^0.7.0"
structlog = "^22.3.0"
openai = "^0.26.4"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.991"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
