[project]
name = "self-governance"
version = "0.1.0"
description = ""
authors = ["Jiayu Yi <yijiayu@gmail.com>"]
readme = "README.md"
packages = [{ include = "self_governance" }]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.14.0",
    "structlog>=25.5.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
